Closed
Bug 201055
Opened 23 years ago
Closed 21 years ago
Automatic mail collection does not work with movemail
Categories
(MailNews Core :: Movemail, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: bugzilla, Assigned: pkwarren)
References
Details
(Keywords: fixed-aviary1.0)
Attachments
(2 files)
5.26 KB,
patch
|
pkwarren
:
review+
mscott
:
superreview+
sspitzer
:
approval1.8a2+
|
Details | Diff | Splinter Review |
3.96 KB,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.4a) Gecko/20030401
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.4a) Gecko/20030401
Check for messages at startup and Check for messages every .. minutes do not
work with movemail accounts.
Reproducible: Always
Steps to Reproduce:
1. Create a movemail account.
2. Enable Mail & Newsgroup Account Settings -> Check for messages at
startup/Check for messages every .. minutes.
3. Send some mail to yourself.
4. Wait .. minutes.
5. Restart Mozilla.
Actual Results:
Nothing.
Expected Results:
After .. minutes or after restarting Mozilla should have received the mail.
![]() |
||
Comment 2•22 years ago
|
||
Movemail is a "protocol" on Unix/Linux systems where the program "fetchmail" is
used to receive the mail from the mailserver with POP3 (or other protocol).
Fetchmail stores the mail in the directory /var/spool/mail/<username> or
/var/mail/<username> where the mozilla mailclient picks it up and moves it to
the standard mozilla mailbox.
Movemail can be enabled in the mozilla mailclient by editing prefs.js and
changing the protocol entry from "pop3" to "movemail". There is no GUI
functionality in the mailclient, movemail can only be enabled by editing the
prefs.js. Movemail setting is part of at least the German mozilla FAQ.
![]() |
||
Comment 3•22 years ago
|
||
So what would happen if you had the inbox at the mailserver NFS-mounted in
/var/mail on your local machine? Would that be enough to confuse mozilla?
![]() |
||
Comment 4•22 years ago
|
||
That shouldn't be a problem. There's a hacky file-locking mechanism used that
works over NFS.
![]() |
||
Comment 5•22 years ago
|
||
I was more refering to the problem that it in that case in reality would move
the mail from and to the same file. I mean the mail file on the server, which it
would pop from would be the same file, but NFS-mounted on the client that
movemail would drop it of to.
![]() |
||
Comment 6•22 years ago
|
||
I don't think that's a problem either, if I understand you correctly. The
process of 'getting' movemail-mail moves the messages out of the mail spool into
a private mail storage hierarchy in your home directory that's part of your
mozilla user profile.
Assignee | ||
Updated•22 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Assignee | ||
Comment 7•22 years ago
|
||
I'm fairly certain that this is because movemail accounts currently do not
implement the PerformBiff function. Here is an example of how PerformBiff is
implemented for POP3 accounts:
http://lxr.mozilla.org/seamonkey/source/mailnews/local/src/nsPop3IncomingServer
.cpp#123
![]() |
||
Comment 8•22 years ago
|
||
Attempting reassignment to new default movemail owner.
Assignee: adam → pkw
Updated•21 years ago
|
Flags: blocking1.8a2?
Updated•21 years ago
|
Flags: blocking1.8a2? → blocking1.8a2-
![]() |
||
Comment 9•21 years ago
|
||
Proposed changes to nsMovemailIncomingServer:
* Implement PerformBiff(). This is heavily based on the corresponding method
in the sibling class nsPop3IncomingServer.
* Implement GetServerRequiresPasswordForBiff(). Always returns PR_FALSE.
* Implement GetDownloadMessagesAtStartup(). Always returns PR_TRUE.
Assignee | ||
Comment 10•21 years ago
|
||
Comment on attachment 152887 [details] [diff] [review]
Proposed patch
I have tested this patch and it is working well for me. Thanks for the
contribution. Requesting sr from mscott.
Attachment #152887 -
Flags: superreview?(mscott)
Attachment #152887 -
Flags: review+
![]() |
||
Updated•21 years ago
|
Attachment #152887 -
Flags: superreview?(mscott) → superreview+
Assignee | ||
Comment 11•21 years ago
|
||
Comment on attachment 152887 [details] [diff] [review]
Proposed patch
This is a relatively low-risk fix which I think should be checked in to the
1.8a2 branch. This only affects users of Movemail accounts, and is a really
high priority for those users.
Attachment #152887 -
Flags: approval1.8a2?
![]() |
||
Comment 12•21 years ago
|
||
Comment on attachment 152887 [details] [diff] [review]
Proposed patch
a=sspitzer
Attachment #152887 -
Flags: approval1.8a2? → approval1.8a2+
Assignee | ||
Comment 13•21 years ago
|
||
Fixed. Thanks for the patch.
Checking in nsMovemailIncomingServer.cpp;
/cvsroot/mozilla/mailnews/local/src/nsMovemailIncomingServer.cpp,v <--
nsMovemailIncomingServer.cpp
new revision: 1.19; previous revision: 1.18
done
Checking in nsMovemailIncomingServer.h;
/cvsroot/mozilla/mailnews/local/src/nsMovemailIncomingServer.h,v <--
nsMovemailIncomingServer.h
new revision: 1.7; previous revision: 1.6
done
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Flags: blocking-aviary1.0RC1?
![]() |
||
Updated•21 years ago
|
Flags: blocking-aviary1.0PR? → blocking-aviary1.0PR+
Whiteboard: fixed-aviary1.0
Updated•21 years ago
|
Keywords: fixed-aviary1.0
Whiteboard: fixed-aviary1.0
Updated•21 years ago
|
Product: MailNews → Core
![]() |
||
Comment 14•21 years ago
|
||
Hello,
I just tested movemail with nightly
Mozilla 1.8a6, Copyright (c) 2003-2004 mozilla.org, build 2004121505
Now movemail does not work at all.
I created a new movemail account, sent a mail to myself and saw it in the
/var/spool/mail/<user> file. But mozilla did not retrieve it with movemail /
does not copy it to <profile>/Mail/inbox, neither with "Get messages" (manual)
nor automatically at startup or after xx minutes. Bug should be reopened, the
fix does not work.
Dieter
![]() |
||
Comment 15•21 years ago
|
||
Attached is a backport of the patch to mozilla-1.7.x, seems to work with 1.7.5
(not tested with earlier 1.7 sub-versions).
Comment 16•21 years ago
|
||
*** Bug 238101 has been marked as a duplicate of this bug. ***
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•