Bug 201055 - Automatic mail collection does not work with movemail r=pkwarren@gmail.com, sr=mscott@mozilla.org, a=sspitzer@mozilla.org

Patch contributed by Michael Malcom <michaelmalcom@mindspring.com>.