mailnews/local/src/nsMovemailIncomingServer.h
@@ -60,7 +60,10 @@ public:
     
     NS_IMETHOD GetIsSecureServer(PRBool *aIsSecureServer);
     NS_IMETHOD GetLocalStoreType(char * *type);
+    NS_IMETHOD PerformBiff(nsIMsgWindow *aMsgWindow);
+    NS_IMETHOD GetDownloadMessagesAtStartup(PRBool *getMessages);
     NS_IMETHOD GetCanSearchMessages(PRBool *canSearchMessages);
+    NS_IMETHOD GetServerRequiresPasswordForBiff(PRBool *aServerRequiresPasswordForBiff);
     NS_IMETHOD GetAccountManagerChrome(nsAString& aResult);
 };
 
